--- a/index.html
+++ b/index.html
@@ -6,34 +6,67 @@
     <title>Mike Matei - Guided Tours & Transfers</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             text-align: center;
             padding: 20px;
-            background-color: #f4f4f4;
+            background: linear-gradient(135deg, #000428, #004e92);
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
         .card {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            margin: auto;
+            background: rgba(255, 255, 255, 0.2);
+            padding: 35px;
+            border-radius: 20px;
+            box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.4);
+            max-width: 450px;
+            width: 90%;
+            backdrop-filter: blur(12px);
+            transition: transform 0.3s ease;
         }
-        h1 { color: #333; margin-bottom: 10px; }
-        h3 { color: #666; margin-bottom: 15px; }
+        .card:hover {
+            transform: translateY(-5px);
+        }
+        h1 {
+            color: #ffffff;
+            font-size: 30px;
+            margin-bottom: 10px;
+            letter-spacing: 1px;
+        }
+        h3 {
+            color: #e0e0e0;
+            margin-bottom: 25px;
+            font-weight: 300;
+        }
         .contact-button {
             display: block;
             width: 100%;
-            padding: 10px;
-            margin: 10px 0;
+            padding: 14px;
+            margin: 12px 0;
             text-decoration: none;
-            background: #007bff;
+            background: linear-gradient(90deg, #00c6ff, #0072ff);
             color: white;
-            border-radius: 5px;
-            transition: background 0.3s ease;
+            font-weight: bold;
+            border-radius: 30px;
+            transition: all 0.3s ease;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
         }
-        .contact-button:hover { background: #0056b3; }
-        img { max-width: 150px; margin: 15px 0; }
+        .contact-button:hover {
+            background: linear-gradient(90deg, #0072ff, #00c6ff);
+            transform: scale(1.07);
+        }
+        img {
+            max-width: 190px;
+            margin: 25px 0;
+            border-radius: 12px;
+            box-shadow: 0px 5px 18px rgba(0, 0, 0, 0.3);
+        }
     </style>
 </head>
 <body>
