--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>💬 <a href="https://wa.me/33625568707" class="contact-button">WhatsApp</a></p>
         <p>📩 <a href="https://t.me/Ro_Mike" class="contact-button">Telegram</a></p>
         <p>📌 Scan the QR code below to save my contact:</p>
-        <img src="https://your-hosted-link.com/Mike_Matei_Business_Card_QR.png" alt="QR Code">
+        <img src="https://raw.githubusercontent.com/RoMike28/Digital-business-card/main/Mike_Matei_Business_Card_QR.png" alt="QR Code">
     </div>
 </body>
 </html>
